testdata/language-features/basic-list/list15.reject.out
type error: can not unify
  Char
with
  ()
in list15.reject.lc:1:20:
value = 'h':'i':():[]
                   ^^
------------ trace
!type error: can not unify
  Char
with
  ()
in list15.reject.lc:1:20:
value = 'h':'i':():[]
                   ^^
------------ tooltips
list15.reject.lc 1:9-1:12
    Char
list15.reject.lc 1:9-1:13
    [Char] -> [Char]
list15.reject.lc 1:12-1:13
    forall a . a -> [a] -> [a]
list15.reject.lc 1:13-1:16
    Char
list15.reject.lc 1:13-1:17
    [Char] -> [Char]
list15.reject.lc 1:16-1:17
    forall a . a -> [a] -> [a]
list15.reject.lc 1:17-1:19
    ()
list15.reject.lc 1:17-1:20
    [()] -> [()]
list15.reject.lc 1:19-1:20
    forall a . a -> [a] -> [a]